public class TagManager
{
    // Tags
    public static string PLAYER_TAG = "Player";
    public static string PLAYER_HEALTH_TAG = "PlayerHealth";
    public static string BACKGROUND_TAG = "Background";
    public static string BULLET_TAG = "Bullet";
    public static string FENCE_TAG = "Fence";
    public static string ROCKET_MISSILE_TAG = "RocketMissile";
    public static string FIRE_BULLET_TAG = "FireBullet";
    public static string ZOMBIE_HEALTH_TAG = "ZombieHealth";
    public static string MELEE_WEAPON_TAG = "MeleeWeapon";
    public static string COIN_TAG = "Coin";

    // Names
    public static string RIGHT_ARM = "ArmR1";

    // Animations and Triggers
    public static string RUN_PARAM = "Run";
    public static string ATTACK_PARAM = "Attack";
    public static string TYPE_WEAPON_PARAM = "TypeWeapon";
    public static string SWITCH_PARAM = "Switch";
    public static string GET_HURT_PARAM = "GetHurt";
    public static string DEAD_PARAM = "Dead";
    public static string RANDOM_PARAM = "Random";
    public static string ZOMBIE_MOVE_PARAM = "Move";
}
